--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "language-ocaml",
+  "name": "language-ocaml-revised",
   "version": "1.9.5",
   "private": true,
   "description": "Syntax support for the OCaml language",
