--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "language-ocaml-revised",
   "version": "1.9.5",
   "private": true,
-  "description": "Syntax support for the OCaml language",
-  "repository": "https://github.com/toroidal-code/language-ocaml",
+  "description": "Revised syntax support for the OCaml language",
+  "repository": "https://github.com/makasimenator/language-ocaml",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
